-Chat FINALLY flows correctly - Chatbox stays at bottom and grows with content to max height, message list takes up rest of height -Adjusted Secondary Colour to be more neutral -Improved some views layouts and readability -Changed some element colours such as navs, hovers, labels for better readability

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -9,25 +9,25 @@
 	--bg-color: #FFFFFF; /*White*/
 	--primary: #3273A8;
 	--primary-hover: #235075;
-	--secondary: #063156;
-	--secondary-hover: #00427A;
+	--secondary: #686e65;
+	--secondary-hover: #4e524c;
 	--danger: #F44336;
 }
-:root, :root.dark {
-	--color1: #F5F5F5;
-	--color2: #15335E;
-	--color3: #FFFFFF;
-	--color4: #3E5678;
-	--color5: #152842;
-	--color6: #0d3575;
-	--white: #FFFFFF;
-	--bg-color: #1D385E;
-	--primary: #295CA3;
-	--primary-hover: #137799;
-	--secondary: #2F9E44;
-	--secondary-hover: #208537;
-	--danger: #F44336;
-}
+	:root, :root.dark {
+		--color1: #F5F5F5;
+		--color2: #15335E;
+		--color3: #FFFFFF;
+		--color4: #3E5678;
+		--color5: #152842;
+		--color6: #0d3575;
+		--white: #FFFFFF;
+		--bg-color: #1D385E;
+		--primary: #295CA3;
+		--primary-hover: #137799;
+		--secondary: #686e65;
+		--secondary-hover: #4e524c;
+		--danger: #F44336;
+	}
 
 html {
 	font-size: 14px;
@@ -70,6 +70,8 @@ a {
 a:hover {
 	color: var(--bs-info);
 }
+
+
 
 body {
 	color: var(--color1);
@@ -165,6 +167,10 @@ body {
 	color: black;
 	background-color: var(--color3);
 }
+.form-label {
+	color: var(--primary);
+	opacity: 1;
+}
 
 /*SIDE NAV*/
 .sidenav {
@@ -194,6 +200,7 @@ body {
 	cursor: pointer; /* Mouse pointer on hover */
 }
 .icon_button:hover {
+	color: var(--primary-hover);
 	background-color: var(--color5);
 }
 
@@ -211,7 +218,7 @@ nav {
 	color: var(--color1);
 }
 .nav-link:hover {
-	color: var(--color2);
+	color: var(--primary);
 }
 /*If active, highlight with color*/
 .nav-pills .pill-1 .nav-link {
@@ -358,7 +365,8 @@ table tr:nth-child(even) {
 .chat {
 	display: flex;
 	flex-flow: column;
-	height: 100%;
+	height: available;
+	max-height: 100%;
 	/*border: 2px solid yellow;*/
 }
 
@@ -368,28 +376,31 @@ table tr:nth-child(even) {
 	overflow: auto;
 	overflow-x: hidden;
 	/* background-color: var(--color6); */
+	flex: 1;
 	flex-flow: column;
 	flex-shrink: 1;
-	flex-grow: 0;
-	flex-basis: auto;
+	flex-grow: 1;
 	flex: 1 1 auto;
 	width: 100%;
+	height: 0; /*DO NOT CHANGE OR BREAKS EVERYTHING*/
 	/*min-height: 75vh;*/
-	max-height: 75vh;
+	/*max-height: 75vh; */
 }
 
 .message-list {
 	display: flex;
+	flex: 1;
 	flex-flow: column;
 	flex-grow: 0;
-	flex-shrink: 0;
-	/* flex-basis: auto; */
+	flex-shrink: 1;
+	flex-basis: available;
 	list-style-type: none;
 	margin: 1px;
 	padding: 5px;
 	width: 100%;
-	height: 100%;
+	height: auto; 
 	/*min-height: 75vh;*/
+	/*max-height: 75vh;*/
 }
 
 .chat-message--user {
@@ -421,7 +432,8 @@ table tr:nth-child(even) {
 .chatbox {
 	/*background-color: var(--color6);*/
 	display: flex;
-	flex-grow: 1;
+	flex: 0;
+	flex-grow: 0;
 	flex-shrink: 0;
 	margin: 0; /*10px;*/
 	padding: 1pt;
